Controller#index: Project.search_by_name_or_customer

--- a/test/fixtures/projects.yml
+++ b/test/fixtures/projects.yml
@@ -11,3 +11,21 @@ two:
   note: "Customer would like to have the TShirt ASAP if possible"
   due_date: 2024-09-23
   customer_name: "Webering" 
+
+three:
+  name: "North Maroubra"
+  note: "Customer wants the shirt to be in waterbase"
+  due_date: 2024-10-11
+  customer_name: "Wellington"
+
+four:
+  name: "Aloha Hawaii"
+  note: "Exporting to Hawaii"
+  due_date: 2024-10-21
+  customer_name: "Aloha Land"
+
+five:
+  name: "500 miles"
+  note: "ship to island of java"
+  due_date: 2024-01-04
+  customer_name: "Alodia Indojaya"
